k8s/springboot-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: springboot-demo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot
spec:
  hosts:
  - "*"
  gateways:
  - springboot-demo-gateway
  http:
  - match:
    - uri:
        exact: /api/v1/hello
    - uri:
        prefix: /api/v1/hello
    route:
    - destination:
        host: springboot-svc
        port:
          number: 8080
